# InfraSight

./: .gitignore  README.md
agent/: Dockerfile  agent.py  agent.toml.example  pyproject.toml
agent/infrasight_agent/: __init__.py  __main__.py  agent.py  client.py  collectors.py  config.py  schemas.py  state.py
backend/: Dockerfile  infrasight.db  pyproject.toml
backend/app/: __init__.py  config.py  database.py  db.py  main.py  schemas.py  security.py
backend/app/api/: endpoints.py
backend/app/models/: endpoint.py
backend/app/routers/: ingest.py  query.py
backend/app/schemas/: metrics.py
backend/app/static/: index.html
dashboard/: .dockerignore  Dockerfile  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/devices/[id]/: page.tsx
dashboard/components/: DeviceCharts.tsx  MetricChart.tsx  RangePicker.tsx
dashboard/lib/: api.ts  format.ts  types.ts
deploy/compose/: .env.example  docker-compose.yml
deploy/compose/db/: 001_init.sql  002_m2_aggregates.sql
docs/: AGENT_PROTOCOL.md  ARCHITECTURE.md
