[project]
name = "infrasight-agent"
version = "0.1.0"
description = "Agente endpoint de InfraSight: recoge métricas con psutil y las envía al backend"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "httpx>=0.27",
    "python-ulid>=2.7",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
infrasight-agent = "infrasight_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["infrasight_agent*"]
